# eba-compliance-rag

./: .gitignore  LICENSE  README.md  app.py  command_line_usage_instructions.txt  pyproject.toml  requirements.txt
ai_docs/: openrouter_api.md
data/: CRR.json  CRR.md  CRR.txt  CRR_md_parser.py  CRR_processed.json  convert.py  crr_full_content_v2.json  crr_xsl_extract.json  crr_xsl_extract.md  crrmd.xsl  extract_articles.py  filter_by_question_hash.py
data/ColBERT/system/: weaviate_metadata.json
data/qa_datasets/: dump_questions_text.py  golden_answers.json  regulation_questions.json  regulation_questions_with_refs_no_need.json  regulation_questions_with_refs_v2.json  regulation_questions_with_refs_v3.json
docs/: score_analysis.md
specs/: future_work_stage_2.md  regulation-rag-eval-v1.md
src/regulations_rag_eval/: __init__.py  calculate_report.py  config.py  eval_framework_data_types.py  open_router_request.py  rag_implementation_data_types.py  short_hash.py  utils.py
src/regulations_rag_eval/eval_framework/: __init__.py  evaluate_answers.py  get_rag_impl_entry_point.py  llm_as_judge_prompt.py  rag_eval.py  score_analysis.py
src/regulations_rag_eval/rag_implementations/: __init__.py  cag_prompt.py  paths.py  rag_prompt.py
src/regulations_rag_eval/rag_implementations/ColBERT/: __init__.py  colbert.py  generate_answers.py  test.py
src/regulations_rag_eval/rag_implementations/ColBERT/prompts/: answer_generation.yaml  hyde.yaml  winnowing.yaml
src/regulations_rag_eval/rag_implementations/ColBERT/utils/: crr_xsl_extract_processed.json  (+1 more)
